--- a/packages/gmap-vue/.babelrc
+++ b/packages/gmap-vue/.babelrc
@@ -1,13 +1,13 @@
 {
   "presets": [
-    ["@babel/env", {
-      "targets": {
-        "browsers": [
-          "last 2 versions",
-          "safari >= 7"
-        ]
+    [
+      "@babel/env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "safari >= 7"]
+        }
       }
-    }]
+    ]
   ],
   "plugins": [
     "transform-inline-environment-variables",
