fix(gmap-vue): fix linter errors on test and examples folder

--- a/packages/gmap-vue/package.json
+++ b/packages/gmap-vue/package.json
@@ -11,8 +11,8 @@
     "build:examples:after": "npm run build && shx cp ./dist/gmap-vue.js ./examples",
     "build:examples:webpack": "cd ./examples && cross-env NODE_ENV=production webpack",
     "lab:tests": "lab -T test/test-setup/babel-transform.js -l -S test",
-    "lint": "prettier --write src test && eslint --fix --ext .vue,.js src && eslint --fix --ext .vue,.html,.js test",
-    "test": "npm run lab:tests && npm run lint",
+    "lint": "prettier --write examples src test && eslint --fix --ext .vue,.html,.js examples src test",
+    "test": "npm run lab:tests",
     "deploy": "npm run build:examples && gh-pages -d examples",
     "prepare": "npm run build",
     "pre-commit": "lint-staged",
@@ -68,11 +68,13 @@
     "json-loader": "^0.5.7",
     "lerna": "^3.20.2",
     "lint-staged": ">=10",
+    "lodash": "^4.17.20",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "puppeteer": "^3.0.0",
     "raw-loader": "^4.0.1",
     "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "style-loader": "^1.1.4",
     "template-html-loader": "1.0.0",
