--- a/packages/gmap-vue/.eslintrc.yml
+++ b/packages/gmap-vue/.eslintrc.yml
@@ -4,30 +4,38 @@ env:
   es6: true
   node: true
 extends:
-  - 'plugin:vue/essential'
-  - 'airbnb-base'
-  - 'prettier'
-  - 'prettier/vue'
-  - 'plugin:eslint-comments/recommended'
+  - plugin:vue/essential
+  - airbnb-base
+  - prettier
+  - prettier/vue
+  - plugin:eslint-comments/recommended
 parserOptions:
-  parser: 'babel-eslint'
+  parser: babel-eslint
   ecmaVersion: 6
   sourceType: module
-  ecmaFeatures: {
+  ecmaFeatures:
     modules: true
-  }
 plugins:
   - vue
-globals: {
+globals:
   google: true
-}
 root: true
-rules: {
-  'eslint-comments/disable-enable-pair': 'error',
-  'eslint-comments/no-aggregating-enable': 'error',
-  'eslint-comments/no-duplicate-disable': 'error',
-  'eslint-comments/no-unlimited-disable': 'error',
-  'eslint-comments/no-unused-disable': 'error',
-  'eslint-comments/no-unused-enable': 'error',
-  'eslint-comments/require-description': ['error', { ignore: ['eslint-enable'] }],
-}
+rules:
+  eslint-comments/disable-enable-pair: error
+  eslint-comments/no-aggregating-enable: error
+  eslint-comments/no-duplicate-disable: error
+  eslint-comments/no-unlimited-disable: error
+  eslint-comments/no-unused-disable: error
+  eslint-comments/no-unused-enable: error
+  eslint-comments/require-description:
+    - error
+    - ignore:
+        - eslint-enable
+  import/no-extraneous-dependencies:
+    - error
+    - devDependencies: true
+      optionalDependencies: false
+      peerDependencies: false
+  no-param-reassign:
+    - error
+    - props: false
