--- a/packages/gmap-vue/examples/src/auto/manualDoc.yml
+++ b/packages/gmap-vue/examples/src/auto/manualDoc.yml
@@ -44,7 +44,7 @@ Autocomplete:
   isIrregular: true
   description:
     If you need to capture the native <code>input</code> / <code>change</code> / <code>keyup</code> /
-     <code>keydown</code> etc. events, just add a <code>.native</code> modifier to the event.
+    <code>keydown</code> etc. events, just add a <code>.native</code> modifier to the event.
   mappedProps:
     bounds: {}
     componentRestrictions: {}
@@ -52,17 +52,22 @@ Autocomplete:
   props:
     placeholder: {}
     selectFirstOnEnter:
-      description:
-        Modifies the behaviour of the <code>Autocomplete</code>
+      description: Modifies the behaviour of the <code>Autocomplete</code>
         to select the first suggestion if the user presses
         <code>Enter</code>.
     value: {}
     options: {}
-  events: ['place_changed', 'input.native', 'change.native', 'focus.native', '*.native']
+  events:
+    [
+      'place_changed',
+      'input.native',
+      'change.native',
+      'focus.native',
+      '*.native',
+    ]
 
 StreetViewPanorama:
-  description:
-    <p>The documentation for this class is incomplete.
+  description: <p>The documentation for this class is incomplete.
     You might want to refer to the source code ;)</p>
   name: streetViewPanorama
   isIrregular: true
@@ -115,7 +120,6 @@ Map:
     options: {}
   props: {}
 
-
 Cluster:
   is3rdParty: true
   description: >
@@ -163,4 +167,3 @@ InfoWindow:
   description: >
     <p>Displays an info window. To add your content, write something like
       <code>&lt;GmapInfoWindow>(Your content here)&lt;/GmapInfoWindow></code> tag</p>
-
