--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "lint": "lerna run lint",
     "release": "lerna version --conventional-commits --yes",
     "gen:docs": "lerna run gen:api:docs",
-    "clean": "rimraf ./packages/**/node_modules && rimraf ./packages/**/package-lock.json && rimraf ./package-lock.json && rimraf ./node_modules"
+    "clean": "rimraf ./packages/**/node_modules && rimraf ./packages/**/package-lock.json && rimraf ./package-lock.json && rimraf ./node_modules",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@commitlint/config-lerna-scopes": "^12.1.4",
-    "husky": "^4.3.8",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "husky": "^7.0.0"
   }
 }
