--- a/packages/gmap-vue/package.json
+++ b/packages/gmap-vue/package.json
@@ -29,6 +29,7 @@
     "@google/markerclustererplus": "^5.1.3",
     "core-js": "^3.16.0",
     "regenerator-runtime": "^0.13.9",
+    "vue-docgen-cli": "^4.40.0",
     "vue-loader": "^15.9.7"
   },
   "peerDependencies": {
@@ -74,7 +75,7 @@
     "vue-loader": "^15.9.7",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
-    "vuepress-jsdoc": "^3.5.0",
+    "vuepress-jsdoc": "3.2.0",
     "webpack": "^5.47.1",
     "webpack-cli": "^4.7.2",
     "yaml-loader": "^0.6.0"
