--- a/packages/gmap-vue/package.json
+++ b/packages/gmap-vue/package.json
@@ -27,18 +27,17 @@
   "homepage": "https://github.com/diegoazh/gmap-vue#readme",
   "dependencies": {
     "@google/markerclustererplus": "^5.1.3",
-    "core-js": "^3.16.0",
+    "core-js": "^3.16.2",
     "regenerator-runtime": "^0.13.9",
-    "vue-docgen-cli": "^4.40.0",
-    "vue-loader": "^15.9.7"
+    "vue-docgen-cli": "^4.41.1"
   },
   "peerDependencies": {
     "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
@@ -52,11 +51,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.15.0",
+    "eslint-plugin-vue": "^7.16.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "jsdoc": "^3.6.7",
@@ -71,13 +70,13 @@
     "template-html-loader": "1.0.0",
     "terser-webpack-plugin": "5.1.4",
     "vue": "^2.6.14",
-    "vue-docgen-api": "^4.40.0",
-    "vue-loader": "^15.9.7",
+    "vue-docgen-api": "^4.41.1",
+    "vue-loader": "^15.9.8",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
     "vuepress-jsdoc": "3.2.0",
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "yaml-loader": "^0.6.0"
   },
   "author": "Daniel Sim, Guillaume Leclerc",
