--- a/packages/gmap-vue/package.json
+++ b/packages/gmap-vue/package.json
@@ -28,16 +28,15 @@
   "dependencies": {
     "@google/markerclustererplus": "^5.1.3",
     "core-js": "^3.16.2",
-    "regenerator-runtime": "^0.13.9",
-    "vue-docgen-cli": "^4.41.1"
+    "regenerator-runtime": "^0.13.9"
   },
   "peerDependencies": {
     "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
@@ -51,31 +50,31 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.16.0",
+    "eslint-plugin-vue": "^7.17.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "jsdoc": "^3.6.7",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.21",
-    "prettier": "^2.3.2",
+    "prettier": "^2.4.0",
     "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "shx": "^0.3.3",
     "style-loader": "^3.2.1",
     "template-html-loader": "1.0.0",
-    "terser-webpack-plugin": "5.1.4",
+    "terser-webpack-plugin": "5.2.3",
     "vue": "^2.6.14",
     "vue-docgen-api": "^4.41.1",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
-    "vuepress-jsdoc": "3.2.0",
-    "webpack": "^5.51.1",
+    "vuepress-jsdoc": "4.0.4",
+    "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
     "yaml-loader": "^0.6.0"
   },
