chore(root): add pnpm as a main package manager
I also update dependencies and upgrade documentation

--- a/lerna.json
+++ b/lerna.json
@@ -12,7 +12,7 @@
       "allowBranch": ["master"]
     }
   },
-  "npmClient": "npm",
+  "npmClient": "pnpm",
   "packages": [
     "packages/*"
   ],
