feat(gmap-vue): rename all components to follow vue linter rules
I also add the last fixes to all components in order to work properly

--- a/packages/gmap-vue/.eslintrc.yml
+++ b/packages/gmap-vue/.eslintrc.yml
@@ -9,8 +9,9 @@ extends:
   - prettier
   - plugin:eslint-comments/recommended
 parserOptions:
-  parser: babel-eslint
-  ecmaVersion: 6
+  parser: "@babel/eslint-parser"
+  ecmaVersion: 8
+  requireConfigFile: false
   sourceType: module
   ecmaFeatures:
     modules: true
