--- a/packages/gmap-vue/package.json
+++ b/packages/gmap-vue/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "prebuild": "rimraf ./dist && shx mkdir -p ./dist && cross-env BUILD_DEV=1 babel src -D --out-dir ./dist && echo {} > dist/.babelrc",
     "build": "cross-env NODE_ENV=production webpack --progress",
-    "build:dev": "npm run prebuild && cross-env NODE_ENV=development webpack --progress",
-    "build:test": "npm run prebuild && cross-env NODE_ENV=test webpack --progress",
+    "build:dev": "pnpm run prebuild && cross-env NODE_ENV=development webpack --progress",
+    "build:test": "pnpm run prebuild && cross-env NODE_ENV=test webpack --progress",
     "lint": "prettier --write ./src && eslint --fix --ext .vue,.js,.html ./src",
     "test": "echo 'not implemented yet'",
-    "prepare": "npm run build",
+    "prepare": "pnpm run build",
     "lint-staged": "lint-staged",
     "gen:api:docs": "rimraf ../documentation/docs/code && npx vuepress-jsdoc -d ../documentation/docs -t \"GmapVue API\" -r ./README.md"
   },
@@ -26,56 +26,56 @@
   },
   "homepage": "https://github.com/diegoazh/gmap-vue#readme",
   "dependencies": {
-    "@google/markerclustererplus": "^5.1.3",
-    "core-js": "^3.16.2",
+    "@googlemaps/markerclusterer": "^1.0.13",
+    "core-js": "^3.19.1",
     "regenerator-runtime": "^0.13.9"
   },
   "peerDependencies": {
     "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/eslint-parser": "^7.16.3",
+    "babel-loader": "^8.2.3",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "better-docs": "^2.3.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.1.4",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.17.0",
+    "eslint-plugin-vue": "^8.0.3",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "jsdoc": "^3.6.7",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.21",
-    "prettier": "^2.4.0",
+    "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "shx": "^0.3.3",
-    "style-loader": "^3.2.1",
+    "style-loader": "^3.3.1",
     "template-html-loader": "1.0.0",
-    "terser-webpack-plugin": "5.2.3",
+    "terser-webpack-plugin": "5.2.5",
     "vue": "^2.6.14",
     "vue-docgen-api": "^4.41.1",
     "vue-loader": "^15.9.8",
-    "vue-router": "^3.5.2",
+    "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.14",
     "vuepress-jsdoc": "4.0.4",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1",
     "yaml-loader": "^0.6.0"
   },
   "author": "Daniel Sim, Guillaume Leclerc",
