--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 10
       - name: Install dependencies
-        run: npm ci
+        run: npm ci && npx lerna bootstrap
       - name: Run tests
         run: npm run test
       - name: Build monorepo
