--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm ci && npx lerna bootstrap
+        run: npm install && npx lerna bootstrap
       - name: Build monorepo
         run: npm run build
       - name: GitHub Pages
