--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 10
       - name: Install pnpm
-        run: curl -fsSL https://get.pnpm.io/install.sh | sh -
+        run: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
       - name: Install dependencies
         run: pnpm install
       - name: Run tests
