--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 10
       - name: Install pnpm
-        run: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
+        run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install
       - name: Run tests
