--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          node-version: 16
       - name: Install pnpm
         run: npm install -g pnpm
       - name: Install dependencies
