--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@commitlint/config-lerna-scopes": "^13.1.0",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "@commitlint/config-lerna-scopes": "^15.0.0",
+    "husky": "^7.0.4",
     "lerna": "^4.0.0",
-    "lint-staged": "^11.1.2",
-    "rimraf": "^3.0.2",
-    "husky": "^7.0.1"
+    "lint-staged": "^12.1.2",
+    "rimraf": "^3.0.2"
   }
 }
