fix(docs): add exact webpack 4 to docs to avoid vuepress build errors

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Build monorepo
-        run: npm run build
+        run: pnpm run build
       - name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.2
         with:
