--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -6,8 +6,8 @@
   "author": "Diego A. Zapata Hantsch",
   "license": "MIT",
   "scripts": {
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs",
+    "dev:docs": "vuepress dev docs",
+    "build:docs": "vuepress build docs",
     "snyk-protect": "snyk protect",
     "prepare": "pnpm run snyk-protect"
   },
