--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start:docs": "pnpm run gen:api:docs -r && pnpm run dev -r",
-    "build": "pnpm run build -r && pnpm run build:docs -r",
+    "build:all": "pnpm run build -r && pnpm run build:docs -r",
     "test": "pnpm run test -r",
     "lint": "pnpm run lint -r",
     "release": "pnpm run release -r",
