--- a/packages/gmap-vue/.releaserc
+++ b/packages/gmap-vue/.releaserc
@@ -1,5 +1,5 @@
 {
-  "extends": "semantic-release-monorepo",
+  "branches": ["master", "next"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
