chore(gmap-vue): fix versoin in package.json that changes after a ci error

--- a/packages/gmap-vue/package.json
+++ b/packages/gmap-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gmap-vue",
-  "version": "0.0.0-development",
+  "version": "2.0.0",
   "description": "This is a google map component for Vue.js, updated for Vue 2 compatibility",
   "main": "dist/main.js",
   "scripts": {
