--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,14 +61,18 @@ jobs:
         run: |
           git remote set-url origin "https://${{ secrets.GH_TOKEN_LERNA }}@github.com/${{ secrets.GH_USER }}/${{ secrets.GH_REPOSITORY }}.git" > /dev/null 2>&1
           git checkout master
+      - name: Move to gmap-vue package
+        run: cd packages/gmap-vue
+      - name: Check dir
+        run: pwd
       - name: Semantic Release
         working-directory: ./packages/gmap-vue
         run: pnpm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      - name: Publish new version to npm
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_AUTH_TOKEN }}
-          package: ./packages/gmap-vue/package.json
+#       - name: Publish new version to npm
+#         uses: JS-DevTools/npm-publish@v1
+#         with:
+#           token: ${{ secrets.NPM_AUTH_TOKEN }}
+#           package: ./packages/gmap-vue/package.json
