--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,13 +3,17 @@ on:
   push:
     branches:
       - master
+      
 jobs:
   publish:
+  
     name: github pages
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
         with:
           node-version: 16
       - name: Install pnpm
