chore(root): trying to to use fresh install

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,7 +14,9 @@ jobs:
           node-version: 16
       - name: Install pnpm
         run: npm install -g pnpm
-      - name: Install dependencies
+      - name: Remove pnpm-lock.yaml file
+        run: rm -rf pnpm-lock.yaml
+      - name: Fresh install dependencies
         run: pnpm install
       - name: Build docs
         run: pnpm run build:docs --recursive
