--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,9 +61,7 @@ jobs:
           git remote set-url origin "https://${{ secrets.GH_TOKEN_LERNA }}@github.com/${{ secrets.GH_USER }}/${{ secrets.GH_REPOSITORY }}.git" > /dev/null 2>&1
           git checkout master
       - name: Move to gmap-vue package
-        run: cd packages/gmap-vue
-      - name: Check dir
-        run: pwd
+        run: cd ./packages/gmap-vue
       - name: Semantic Release
         working-directory: ./packages/gmap-vue
         run: pnpm run release
