--- a/packages/gmap-vue/.releaserc
+++ b/packages/gmap-vue/.releaserc
@@ -12,7 +12,8 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["./CHANGELOG.md"]
+        "assets": ["./CHANGELOG.md"],
+        "message": "chore(gmap-vue): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
   ]
