chore(root): disable greetings section

--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -24,16 +24,16 @@ labelPRBasedOnFilePath:
 
 ##### Greetings ########################################################################################################
 # Comment to be posted to welcome users when they open their first PR
-firstPRWelcomeComment: >
-  Thanks for opening this pull request! Please check out our contributing guidelines.
+# firstPRWelcomeComment: >
+#   Thanks for opening this pull request! Please check out our contributing guidelines.
 
 # Comment to be posted to congratulate user on their first merged PR
-firstPRMergeComment: >
-  Awesome work, congrats on your first merged pull request!
+# firstPRMergeComment: >
+#   Awesome work, congrats on your first merged pull request!
 
 # Comment to be posted to on first time issues
-firstIssueWelcomeComment: >
-  Thanks for opening your first issue here! Be sure to follow the issue template!
+# firstIssueWelcomeComment: >
+#   Thanks for opening your first issue here! Be sure to follow the issue template!
 
 ###### IssueLink Adder #################################################################################################
 # Insert Issue (Jira/Github etc) link in PR description based on the Issue ID in PR title.
