chore(root): update labe for need more info

--- a/.github/config.yml
+++ b/.github/config.yml
@@ -19,7 +19,7 @@ requestInfoDefaultTitles:
   - updates
 
 # *OPTIONAL* Label to be added to Issues and Pull Requests with insufficient information given
-requestInfoLabelToAdd: needs-more-info
+requestInfoLabelToAdd: needs more info
 
 # *OPTIONAL* Require Issues to contain more information than what is provided in the issue templates
 # Will fail if the issue's body is equal to a provided template
