--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -1,9 +1,9 @@
 # Always validate the PR title, and ignore the commits
 titleOnly: false
 # Always validate all commits, and ignore the PR title
-commitsOnly: false
+commitsOnly: true
 # Always validate the PR title AND all the commits
-titleAndCommits: true
+titleAndCommits: false
 # Require at least one commit to be valid
 # this is only relevant when using commitsOnly: true or titleAndCommits: true,
 # which validate all commits by default
@@ -13,7 +13,7 @@ scopes:
   - deps
   - root # apply only to the root folder
   - all # a change in all scopes
-  - documentation
+  - docs
   - gmap-vue
 # By default types specified in commitizen/conventional-commit-types is used.
 # See: https://github.com/commitizen/conventional-commit-types/blob/v3.0.0/index.json
