chore(gmap-vue): use github plugin for semantic release

--- a/packages/gmap-vue/.releaserc
+++ b/packages/gmap-vue/.releaserc
@@ -10,7 +10,7 @@
       }
     ],
     [
-      "@semantic-release/git",
+      "@semantic-release/github",
       {
         "assets": ["./CHANGELOG.md"],
         "message": "chore(gmap-vue): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
