--- a/packages/gmap-vue/.releaserc
+++ b/packages/gmap-vue/.releaserc
@@ -24,7 +24,7 @@
     ],
     "@semantic-release/npm",
     [
-      "@semantic-release/git",
+      "@semantic-release/github",
       {
         "assets": ["./package.json", "./CHANGELOG.md"],
         "message": "chore(gmap-vue): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
