--- a/packages/gmap-vue/.releaserc
+++ b/packages/gmap-vue/.releaserc
@@ -1,12 +1,40 @@
 {
   "branches": ["master", "next"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
+    ["@semantic-release/commit-analyzer", {
+      "preset": "angular",
+      "parserOpts": {
+        "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+      }
+    }],
+    ["@semantic-release/release-notes-generator", {
+      "preset": "angular",
+      "parserOpts": {
+        "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+      },
+      "writerOpts": {
+        "commitsSort": ["scope", "subject"]
+      }
+    }],
     [
       "@semantic-release/changelog",
       {
         "changelogFile": "./CHANGELOG.md"
+      }
+    ],
+    "@semantic-release/npm",
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["./CHANGELOG.md"],
+        "message": "chore(gmap-vue): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["./CHANGELOG.md"],
+        "message": "chore(gmap-vue): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
     [
@@ -16,5 +44,6 @@
         "message": "chore(gmap-vue): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
-  ]
+  ],
+  "preset": "angular"
 }
