--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -15,8 +15,11 @@
     "gmap-vue": "workspace:../gmap-vue",
     "lodash": "^4.17.21",
     "snyk": "^1.769.0",
-    "vuepress": "^1.8.2",
-    "webpack": "^4.26.0"
+    "vuepress": "^1.8.2"
   },
-  "snyk": true
+  "snyk": true,
+  "devDependencies": {
+    "html-webpack-inline-source-plugin": "^0.0.10",
+    "html-webpack-plugin": "^5.5.0"
+  }
 }
