chore(docs): update documentation workflow to use docs path to work

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm
       - name: Install dependencies
+        working-directory: ./packages/documentation
         run: pnpm install
       - name: Build docs
         working-directory: ./packages/documentation
