--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,7 +22,7 @@ jobs:
         run: rm -rf ./pnpm-workspace.yaml
       - name: Install dependencies
         working-directory: ./packages/documentation
-        run: pnpm install
+        run: pnpm add --save webpack@4.0.0
       - name: Build docs
         working-directory: ./packages/documentation
         run: pnpm run build:docs
