chore(docs): remove pnpm workspace file before install dependencies

--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -17,9 +17,5 @@
     "snyk": "^1.850.0",
     "vuepress": "^1.9.7"
   },
-  "snyk": true,
-  "devDependencies": {
-    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
-    "html-webpack-plugin": "^4.0.0"
-  }
+  "snyk": true
 }
