--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,12 +18,11 @@ jobs:
           node-version: 16
       - name: Install pnpm
         run: npm install -g pnpm
+      - name: Remove pnpm-workspace.yaml
+        run: rm -rf ./pnpm-workspace.yaml
       - name: Install dependencies
         working-directory: ./packages/documentation
         run: pnpm install
-      - name: Install Webpack 4
-        working-directory: ./packages/documentation
-        run: pnpm add --save webpack@4.0.0
       - name: Build docs
         working-directory: ./packages/documentation
         run: pnpm run build:docs
