--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -6,7 +6,7 @@
   "author": "Diego A. Zapata Hantsch",
   "license": "MIT",
   "scripts": {
-    "dev:docs": "vuepress dev docs",
+    "serve:docs": "vuepress dev docs",
     "build:docs": "vuepress build docs",
     "snyk-protect": "snyk protect",
     "prepare": "pnpm run snyk-protect"
