--- a/packages/gmap-vue/package.json
+++ b/packages/gmap-vue/package.json
@@ -3,20 +3,31 @@
   "version": "3.5.1",
   "description": "This is a google map component for Vue.js, updated for Vue 2 compatibility",
   "main": "dist/main.js",
+  "module": "dist/esm/main.js",
+  "unpkg": "dist/gmap-vue.min.js",
+  "jsdelivr": "dist/gmap-vue.min.js",
+  "browser": {
+    "./sfc": "dist/components"
+  },
   "engines": {
     "node": ">=12",
     "npm": ">6"
   },
   "scripts": {
-    "clean:build": "rimraf ./dist && shx mkdir -p ./dist && cross-env BUILD_DEV=1 babel src -D --out-dir ./dist && echo {} > dist/.babelrc",
-    "build": "pnpm run clean:build && cross-env NODE_ENV=production webpack --progress",
-    "build:dev": "pnpm run clean:build && cross-env NODE_ENV=development webpack --progress",
-    "build:test": "pnpm run clean:build && cross-env NODE_ENV=test webpack --progress",
+    "clean:build": "rimraf ./dist",
+    "build": "pnpm run clean:build && cross-env NODE_ENV=production rollup --config",
+    "build:dev": "pnpm run clean:build && cross-env NODE_ENV=development rollup --config",
+    "build:test": "pnpm run clean:build && cross-env NODE_ENV=test rollup --config",
     "lint": "prettier --write ./src && eslint --fix --ext .vue,.js,.html ./src",
     "test": "echo 'not implemented yet'",
     "lint-staged": "lint-staged",
     "gen:api:docs": "rimraf ../documentation/docs/code && npx vuepress-jsdoc -d ../documentation/docs -t \"GmapVue API\" -r ./README.md",
     "release": "semantic-release"
+  },
+  "exports": {
+    "import": "./dist/esm/main.js",
+    "require": "./dist/main.js",
+    "default": "./dist/esm/main.js"
   },
   "files": [
     "dist"
@@ -42,16 +53,17 @@
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
     "@babel/preset-env": "^7.16.4",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "better-docs": "^2.3.2",
-    "copy-webpack-plugin": "^10.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.1.4",
     "documentation": "^13.2.5",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -63,30 +75,23 @@
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "jsdoc": "^3.6.7",
-    "json-loader": "^0.5.7",
-    "lodash": "^4.17.21",
     "prettier": "^2.4.1",
-    "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
+    "rollup": "^2.70.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^5.0.0",
     "semantic-release": "^18.0.0",
     "semantic-release-cli": "^5.4.4",
-    "shelljs": "^0.8.4",
-    "shx": "^0.3.3",
-    "style-loader": "^3.3.1",
-    "template-html-loader": "1.0.0",
-    "terser-webpack-plugin": "5.2.5",
     "vue": "^2.6.14",
     "vue-docgen-api": "^4.41.1",
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.14",
-    "vuepress-jsdoc": "4.0.4",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "yaml-loader": "^0.6.0"
+    "vuepress-jsdoc": "4.0.4"
   },
   "author": "Daniel Sim, Guillaume Leclerc",
   "license": "MIT"
