--- a/packages/gmap-vue-next/package.json
+++ b/packages/gmap-vue-next/package.json
@@ -38,7 +38,6 @@
     "lint": "prettier --write ./src && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint-staged": "lint-staged",
     "copy:components": "cpx \"./src/components/*.vue\" \"./build/src/components\" --verbose",
-    "gen:api:docs": "rimraf ../documentation/docs/code && npx vuepress-jsdoc -d ../documentation/docs -t \"GmapVue API\" -r ./README.md",
     "release": "semantic-release"
   },
   "exports": {
@@ -60,54 +59,36 @@
   },
   "homepage": "https://github.com/diegoazh/gmap-vue#readme",
   "dependencies": {
-    "@googlemaps/markerclusterer": "^2.0.11",
+    "@googlemaps/markerclusterer": "^2.0.13",
     "lodash.isequal": "^4.5.0",
     "mitt": "^3.0.0",
-    "vue": "^3.2.40"
+    "vue": "^3.2.44"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.3",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/plugin-transform-runtime": "^7.19.1",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-typescript": "^7.18.6",
-    "@jest/types": "^29.1.2",
-    "@rollup/plugin-babel": "^6.0.0",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^14.1.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@swc/core": "^1.3.6",
-    "@types/google.maps": "^3.50.4",
-    "@types/jest": "^29.1.2",
-    "@types/jsdom": "^20.0.0",
+    "@swc/core": "^1.3.14",
+    "@types/google.maps": "^3.50.5",
+    "@types/jsdom": "^20.0.1",
     "@types/lodash.isequal": "^4.5.6",
-    "@types/node": "^18.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vitest/coverage-c8": "^0.24.3",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitest/coverage-c8": "^0.25.1",
     "@vue/eslint-config-airbnb": "^7.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.1.0",
+    "@vue/test-utils": "^2.2.1",
     "@vue/tsconfig": "^0.1.3",
-    "@vue/vue3-jest": "^29.1.1",
-    "babel-jest": "^29.1.2",
-    "babel-loader": "^8.2.5",
-    "babel-plugin-minify-dead-code-elimination": "^0.5.2",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "better-docs": "^2.7.2",
+    "@vue/vue3-jest": "^29.2.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
-    "cypress": "^10.9.0",
+    "cypress": "^11.0.1",
     "cypress-plugin-tab": "^1.0.5",
-    "documentation": "^14.0.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.25.0",
+    "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -115,39 +96,26 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.6.0",
-    "eslint-plugin-vuejs-accessibility": "^1.2.0",
+    "eslint-plugin-vue": "^9.7.0",
+    "eslint-plugin-vuejs-accessibility": "^2.0.0",
     "gh-pages": "^4.0.0",
-    "happy-dom": "^7.4.0",
-    "jest": "^29.1.2",
-    "jsdoc": "^3.6.11",
-    "jsdom": "^20.0.1",
+    "happy-dom": "^7.6.7",
+    "jsdom": "^20.0.2",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.79.1",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^3.0.2",
-    "rollup-plugin-vue": "^6.0.0",
     "semantic-release": "^19.0.5",
     "semantic-release-cli": "^5.4.4",
     "start-server-and-test": "^1.14.0",
     "stylus": "^0.59.0",
-    "ts-jest": "^29.0.3",
     "typescript": "~4.8.4",
-    "vite": "^3.1.6",
-    "vite-plugin-dts": "^1.6.5",
-    "vitest": "^0.24.0",
-    "vue-docgen-api": "^4.52.0",
-    "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.7.10",
-    "vue-tsc": "^1.0.1",
-    "vuepress-jsdoc": "4.3.1"
+    "vite": "^3.2.3",
+    "vite-plugin-dts": "^1.7.0",
+    "vitest": "^0.25.1",
+    "vue-tsc": "^1.0.9"
   },
   "author": "Diego A. Zapata Häntsch, Daniel Sim, Guillaume Leclerc",
   "license": "MIT"
