--- a/packages/gmap-vue-next/tsconfig.app.json
+++ b/packages/gmap-vue-next/tsconfig.app.json
@@ -1,31 +1,16 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": [
-    "env.d.ts",
-    "src/**/*",
-    "src/**/*.vue"
-  ],
-  "exclude": [
-    "src/**/__tests__/*"
-  ],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "lib": [
-      "ES2020",
-      "DOM"
-    ],
+    "lib": ["ES2020", "DOM"],
     "target": "ES2020",
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "types": [
-      "node_modules",
-      "google.maps",
-      "node"
-    ],
+    "types": ["google.maps", "node"],
     "outDir": "dist/types",
     "declaration": true,
     "declarationDir": "dist/types",
