--- a/packages/gmap-vue-next/tsconfig.app.json
+++ b/packages/gmap-vue-next/tsconfig.app.json
@@ -1,20 +1,26 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.ts",
+    "src/**/*.vue",
+    "src/**/*.type.ts",
+    "src/**/*.interface.ts"
+  ],
+  "exclude": ["src/tests/**/*", "src/cypress/**/*"],
   "compilerOptions": {
     "lib": ["ES2020", "DOM"],
     "target": "ES2020",
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     },
     "types": ["google.maps", "node"],
     "outDir": "dist/types",
     "declaration": true,
     "declarationDir": "dist/types",
-    "isolatedModules": true,
     "moduleResolution": "node",
     "strict": true,
     "noImplicitThis": true,
