--- a/packages/gmap-vue-next/tsconfig.config.json
+++ b/packages/gmap-vue-next/tsconfig.config.json
@@ -1,14 +1,8 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.node.json",
-  "include": [
-    "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*"
-  ],
+  "extends": "@vue/tsconfig/tsconfig.json",
+  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*"],
   "compilerOptions": {
     "composite": true,
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   }
 }
