chore(v3): update pnpm-lock file, package names on every package.json file and cypress config on v3 path

--- a/packages/v2/package.json
+++ b/packages/v2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gmap-vue",
+  "name": "gmap-vue-v2",
   "version": "3.5.4",
   "description": "This is a google map component for Vue.js, updated for Vue 2 compatibility",
   "type": "module",
