--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gmap-vue-next",
+  "name": "gmap-vue",
   "version": "4.0.0",
   "description": "This is a google map component for Vue.js, updated for Vue 2 compatibility",
   "main": "dist/main.umd.js",
