fix(v3): fix types and exported members from this plugin

--- a/packages/v3/tsconfig.app.json
+++ b/packages/v3/tsconfig.app.json
@@ -28,6 +28,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "stripInternal": true
   }
 }
