--- a/packages/v2/package.json
+++ b/packages/v2/package.json
@@ -14,6 +14,9 @@
     "node": ">=12",
     "npm": ">6"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "clean:build": "rimraf ./dist",
     "build": "pnpm run clean:build && cross-env NODE_ENV=production rollup --config",
