--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -14,6 +14,9 @@
     "node": ">=12",
     "npm": ">6"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "clean:build": "rimraf ./dist && rimraf ./build && rimraf ./types",
     "dev": "vite",
